--- a/.github/workflows/pella-checkin.yml
+++ b/.github/workflows/pella-checkin.yml
@@ -1,9 +1,9 @@
-name: Pella自动续期
+name: Pella自动续期 (已禁用-第二个链接有CF保护)
 
 on:
-  schedule:
-    # 每天UTC时间00:00运行（北京时间08:00）
-    - cron: '0 0 * * *'
+  # schedule:
+  #   # 每天UTC时间00:00运行（北京时间08:00）
+  #   - cron: '0 0 * * *'
   workflow_dispatch:  # 允许手动触发
 
 jobs:
